--- a/data/static/html/login.html
+++ b/data/static/html/login.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 <body>
+    <div id="header-container"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+   $(document).ready(function () {
+       $('#header-container').load('/static/html/header.html');
+   });
+</script>
     <div class="container">
         <h1 class="mt-4">Вход</h1>
         <form class="mt-4" id="loginForm" method="post" action="/token">
@@ -24,8 +32,7 @@
             <button type="submit" class="btn btn-primary">Войти</button>
         </form>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <script>
         $(function() {
             $("#birthDate").datepicker({
