--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -1,133 +1,205 @@
+{% extends "base.html" %} {% block title %} Регистрация {% endblock %} {% block
+base_content %}
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Регистрация в школе дополнительного образования</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-</head>
-<body>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
+  </head>
+  <body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-    <div id="header-container"></div>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-    $(document).ready(function () {
-        $('#header-container').load('/static/html/header.html');
-    });
-</script>
     <div class="container">
-        <h1 class="mt-4">Регистрация</h1>
-        <form class="mt-4" id="registrationForm" method="post" action="/registration">
-            <div class="form-group">
-                <label for="fullName">ФИО обучающегося:</label>
-                <input type="text" class="form-control" id="fullName" name="fullName" required value="Иванов Иван Иванович">
-            </div>
-            <div class="form-group">
-                <label for="email">Email обучающегося:</label>
-                <input type="email" class="form-control" id="email" name="email" required value="ivanov@example.com">
-            </div>
-            <div class="form-group">
-                <label for="password">Пароль:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>
-            <div class="form-group">
-                <label for="confirmPassword">Подтвердите пароль:</label>
-                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
-            </div>
-            <div class="form-group">
-                <label for="parentEmail">Email представителя (опционально):</label>
-                <input type="email" class="form-control" id="parentEmail" name="parentEmail" value="parent@example.com">
-            </div>
-            <div class="form-group">
-                <label for="school">Основная школа:</label>
-                <input type="text" class="form-control" id="school" name="school" required value="Школа №123">
-            </div>
-            <div class="form-group">
-                <label for="schoolClass">Класс:</label>
-                <input type="number" class="form-control" id="schoolClass" name="schoolClass" required value="2015">
-            </div>
-            <div class="form-group">
-                <label for="birthDate">Дата рождения (ДД.ММ.ГГГГ):</label>
-                <input type="text" class="form-control" id="birthDate" name="birthDate" required placeholder="ДД.ММ.ГГГГ">
-            </div>
-            <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-        </form>
+      <h1 class="mt-4">Регистрация</h1>
+      <form
+        class="mt-4"
+        id="registrationForm"
+        method="post"
+        action="/registration"
+      >
+        <div class="form-group">
+          <label for="fullName">ФИО обучающегося:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="fullName"
+            name="fullName"
+            required
+            value="Иванов Иван Иванович"
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email обучающегося:</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            required
+            value="ivanov@example.com"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Пароль:</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Подтвердите пароль:</label>
+          <input
+            type="password"
+            class="form-control"
+            id="confirmPassword"
+            name="confirmPassword"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="parentEmail">Email представителя (опционально):</label>
+          <input
+            type="email"
+            class="form-control"
+            id="parentEmail"
+            name="parentEmail"
+            value="parent@example.com"
+          />
+        </div>
+        <div class="form-group">
+          <label for="school">Основная школа:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="school"
+            name="school"
+            required
+            value="Школа №123"
+          />
+        </div>
+        <div class="form-group">
+          <label for="schoolClass">Класс:</label>
+          <input
+            type="number"
+            class="form-control"
+            id="schoolClass"
+            name="schoolClass"
+            required
+            value="2015"
+          />
+        </div>
+        <div class="form-group">
+          <label for="birthDate">Дата рождения (ДД.ММ.ГГГГ):</label>
+          <input
+            type="text"
+            class="form-control"
+            id="birthDate"
+            name="birthDate"
+            required
+            placeholder="ДД.ММ.ГГГГ"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">
+          Зарегистрироваться
+        </button>
+      </form>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
-        $(function() {
-            $("#birthDate").datepicker({
-                dateFormat: "dd.mm.yy"
-            });
+      $(function () {
+        $("#birthDate").datepicker({
+          dateFormat: "dd.mm.yy",
+        });
+      });
+
+      document
+        .getElementById("registrationForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+
+          var password = document.getElementById("password").value;
+          var confirmPassword =
+            document.getElementById("confirmPassword").value;
+
+          if (password !== confirmPassword) {
+            alert(
+              "Пароли не совпадают. Пожалуйста, проверьте введенные пароли."
+            );
+            return;
+          }
+
+          var fullName = document.getElementById("fullName").value;
+          var email = document.getElementById("email").value;
+          var parentEmail = document.getElementById("parentEmail").value;
+          var school = document.getElementById("school").value;
+          var schoolClass = document.getElementById("schoolClass").value;
+          var birthDateInput = document.getElementById("birthDate");
+
+          var birthDateValue = birthDateInput.value;
+          var formattedBirthDate = formatDateString(birthDateValue);
+          birthDateInput.value = formattedBirthDate;
+
+          var data = {
+            fullName: fullName,
+            email: email,
+            parentEmail: parentEmail,
+            school: school,
+            schoolClass: schoolClass,
+            birthDate: formattedBirthDate,
+            password: password,
+          };
+
+          var xhr = new XMLHttpRequest();
+          xhr.open("POST", "/registration", true);
+          xhr.setRequestHeader(
+            "Content-Type",
+            "application/json;charset=UTF-8"
+          );
+          xhr.send(JSON.stringify(data));
+
+          xhr.onload = function () {
+            if (xhr.status === 200) {
+              // Обработка успешного запроса
+              alert("Регистрация прошла успешно!");
+            } else {
+              // Обработка ошибки запроса
+              alert("Ошибка регистрации. Пожалуйста, попробуйте позже.");
+            }
+          };
         });
 
-        document.getElementById("registrationForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-
-            var password = document.getElementById("password").value;
-            var confirmPassword = document.getElementById("confirmPassword").value;
-
-            if (password !== confirmPassword) {
-                alert("Пароли не совпадают. Пожалуйста, проверьте введенные пароли.");
-                return;
-            }
-
-            var fullName = document.getElementById("fullName").value;
-            var email = document.getElementById("email").value;
-            var parentEmail = document.getElementById("parentEmail").value;
-            var school = document.getElementById("school").value;
-            var schoolClass = document.getElementById("schoolClass").value;
-            var birthDateInput = document.getElementById("birthDate");
-
-            var birthDateValue = birthDateInput.value;
-            var formattedBirthDate = formatDateString(birthDateValue);
-            birthDateInput.value = formattedBirthDate;
-
-            var data = {
-                fullName: fullName,
-                email: email,
-                parentEmail: parentEmail,
-                school: school,
-                schoolClass: schoolClass,
-                birthDate: formattedBirthDate,
-                password: password
-            };
-
-            var xhr = new XMLHttpRequest();
-            xhr.open("POST", "/registration", true);
-            xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-            xhr.send(JSON.stringify(data));
-
-            xhr.onload = function() {
-                if (xhr.status === 200) {
-                    // Обработка успешного запроса
-                    alert("Регистрация прошла успешно!");
-                } else {
-                    // Обработка ошибки запроса
-                    alert("Ошибка регистрации. Пожалуйста, попробуйте позже.");
-                }
-            };
-        });
-
-        function formatDateString(dateString) {
-            var cleanedString = dateString.replace(/[^\d.]/g, "");
-            var parts = cleanedString.split(".");
-            var day = parts[0] || "";
-            var month = parts[1] || "";
-            day = day.substr(0, 2);
-            month = month.substr(0, 2);
-            var year = parts[2] || "";
-            year = year.substr(0, 4);
-            var formattedDate = day;
-            if (month) {
-                formattedDate += "." + month;
-            }
-            if (year) {
-                formattedDate += "." + year;
-            }
-            return formattedDate;
+      function formatDateString(dateString) {
+        var cleanedString = dateString.replace(/[^\d.]/g, "");
+        var parts = cleanedString.split(".");
+        var day = parts[0] || "";
+        var month = parts[1] || "";
+        day = day.substr(0, 2);
+        month = month.substr(0, 2);
+        var year = parts[2] || "";
+        year = year.substr(0, 4);
+        var formattedDate = day;
+        if (month) {
+          formattedDate += "." + month;
         }
+        if (year) {
+          formattedDate += "." + year;
+        }
+        return formattedDate;
+      }
     </script>
-</body>
+  </body>
 </html>
+
+{% endblock %}
