--- a/data/static/html/send_docs.html
+++ b/data/static/html/send_docs.html
@@ -1,86 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <title>Загрузка файлов</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
     <style>
-        .thumbnail {
-            margin: 10px;
-        }
+      .thumbnail {
+        margin: 10px;
+      }
     </style>
-</head>
-<body>
-<div id="header-container"></div>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-    $(document).ready(function () {
-        $('#header-container').load('/static/html/header.html');
-    });
-</script>
+  </head>
+  <body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    {% extends "base_with_status.html" %} {% block title %} Загрузка документов
+    {% endblock %} {% block base_with_status_content %}
+
     <div class="container">
-        <h1 class="mt-4">Загрузка файлов</h1>
+      <h1 class="mt-4">Загрузка файлов</h1>
 
-        <form id="fileUploadForm" action="/send_docs" method="post" enctype="multipart/form-data">
-            <div class="mb-3">
-                <label for="passportFile" class="form-label">Паспорт:</label>
-                <input type="file" class="form-control" id="passportFile" name="files" accept=".pdf, .jpg, .jpeg, .png">
-                <div id="passportThumbnail" class="thumbnail"></div>
-            </div>
+      <form
+        id="fileUploadForm"
+        action="/send_docs"
+        method="post"
+        enctype="multipart/form-data"
+      >
+        <div class="mb-3">
+          <label for="passportFile" class="form-label">Паспорт:</label>
+          <input
+            type="file"
+            class="form-control"
+            id="passportFile"
+            name="files"
+            accept=".pdf, .jpg, .jpeg, .png"
+          />
+          <div id="passportThumbnail" class="thumbnail"></div>
+        </div>
 
-            <div class="mb-3">
-                <label for="snilsFile" class="form-label">СНИЛС:</label>
-                <input type="file" class="form-control" id="snilsFile" name="files" accept=".pdf, .jpg, .jpeg, .png">
-                <div id="snilsThumbnail" class="thumbnail"></div>
-            </div>
+        <div class="mb-3">
+          <label for="snilsFile" class="form-label">СНИЛС:</label>
+          <input
+            type="file"
+            class="form-control"
+            id="snilsFile"
+            name="files"
+            accept=".pdf, .jpg, .jpeg, .png"
+          />
+          <div id="snilsThumbnail" class="thumbnail"></div>
+        </div>
 
-            <div class="mb-3">
-                <label for="certificateFile" class="form-label">Свидетельство:</label>
-                <input type="file" class="form-control" id="certificateFile" name="files" accept=".pdf, .jpg, .jpeg, .png">
-                <div id="certificateThumbnail" class="thumbnail"></div>
-            </div>
+        <div class="mb-3">
+          <label for="certificateFile" class="form-label">Свидетельство:</label>
+          <input
+            type="file"
+            class="form-control"
+            id="certificateFile"
+            name="files"
+            accept=".pdf, .jpg, .jpeg, .png"
+          />
+          <div id="certificateThumbnail" class="thumbnail"></div>
+        </div>
 
-            <div class="mb-3">
-                <label for="contractFile" class="form-label">Договор:</label>
-                <input type="file" class="form-control" id="contractFile" name="files" accept=".pdf, .jpg, .jpeg, .png">
-                <div id="contractThumbnail" class="thumbnail"></div>
-            </div>
+        <div class="mb-3">
+          <label for="contractFile" class="form-label">Договор:</label>
+          <input
+            type="file"
+            class="form-control"
+            id="contractFile"
+            name="files"
+            accept=".pdf, .jpg, .jpeg, .png"
+          />
+          <div id="contractThumbnail" class="thumbnail"></div>
+        </div>
 
-            <button type="submit" class="btn btn-primary">Загрузить</button>
-        </form>
-
+        <button type="submit" class="btn btn-primary">Загрузить</button>
+      </form>
     </div>
+    {% endblock %}
 
     <script>
-        const displayThumbnail = (inputId, thumbnailId) => {
-            const fileInput = document.getElementById(inputId);
-            const thumbnail = document.getElementById(thumbnailId);
-            fileInput.addEventListener('change', function () {
-                const file = fileInput.files[0];
-                if (file) {
-                    const reader = new FileReader();
-                    reader.onload = function (e) {
-                        const img = document.createElement('img');
-                        img.src = e.target.result;
-                        img.style.maxHeight = '150px';
-                        img.style.maxWidth = '100%';
-                        thumbnail.innerHTML = '';
-                        thumbnail.appendChild(img);
-                    };
-                    reader.readAsDataURL(file);
-                } else {
-                    thumbnail.innerHTML = '';
-                }
-            });
-        };
+      const displayThumbnail = (inputId, thumbnailId) => {
+        const fileInput = document.getElementById(inputId);
+        const thumbnail = document.getElementById(thumbnailId);
+        fileInput.addEventListener("change", function () {
+          const file = fileInput.files[0];
+          if (file) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+              const img = document.createElement("img");
+              img.src = e.target.result;
+              img.style.maxHeight = "150px";
+              img.style.maxWidth = "100%";
+              thumbnail.innerHTML = "";
+              thumbnail.appendChild(img);
+            };
+            reader.readAsDataURL(file);
+          } else {
+            thumbnail.innerHTML = "";
+          }
+        });
+      };
 
-        displayThumbnail('passportFile', 'passportThumbnail');
-        displayThumbnail('snilsFile', 'snilsThumbnail');
-        displayThumbnail('certificateFile', 'certificateThumbnail');
-        displayThumbnail('contractFile', 'contractThumbnail');
+      displayThumbnail("passportFile", "passportThumbnail");
+      displayThumbnail("snilsFile", "snilsThumbnail");
+      displayThumbnail("certificateFile", "certificateThumbnail");
+      displayThumbnail("contractFile", "contractThumbnail");
     </script>
-</body>
+  </body>
 </html>
-
