Исправлены баги, добавлено получение заявления по ссылке

--- a/data/static/html/base.html
+++ b/data/static/html/base.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto"></ul>
           <ul class="navbar-nav">
-            {% if user is none %}
+            {% if user is undefined %}
             <li class="nav-item">
               <a class="nav-link" href="/login">Вход</a>
             </li>
