--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -175,7 +175,9 @@ base_content %}
               alert("Регистрация прошла успешно!");
             } else {
               // Обработка ошибки запроса
-              alert("Ошибка регистрации. Пожалуйста, попробуйте позже.");
+              alert(
+                "Ошибка регистрации: " + JSON.parse(xhr.responseText).detail
+              );
             }
           };
         });
