--- a/data/static/html/send_docs.html
+++ b/data/static/html/send_docs.html
@@ -31,7 +31,7 @@
 
       <form
         id="fileUploadForm"
-        action="/send_docs"
+        action="/application/fill_docs"
         method="post"
         enctype="multipart/form-data"
       >
