--- a/data/static/html/fill_data.html
+++ b/data/static/html/fill_data.html
@@ -155,7 +155,7 @@ endblock %} {% block base_with_status_content %}
 
         // Отправляем данные на сервер
         var xhr = new XMLHttpRequest();
-        xhr.open("POST", "/");
+        xhr.open("POST", document.URL);
         xhr.setRequestHeader("Content-Type", "application/json");
         xhr.onload = function () {
           if (xhr.status === 200) {
