--- a/data/static/html/dashboard.html
+++ b/data/static/html/dashboard.html
@@ -10,7 +10,6 @@ block base_content %}
     <div class="row">
       <div class="col-md-8">
         <div class="d-flex align-items-center mb-3">
-          <!-- Аватарка -->
           <img
             class="me-3"
             width="60"
@@ -18,33 +17,28 @@ block base_content %}
             src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/60/external-astronaut-space-vitaliy-gorbachev-lineal-color-vitaly-gorbachev-4.png"
             alt="external-astronaut-space-vitaliy-gorbachev-lineal-color-vitaly-gorbachev-4"
           />
-          <!-- ФИО -->
           <div>
             <h1>{{user.fullName}}</h1>
             <p>{{user.email}}</p>
           </div>
         </div>
         <p>
-          Телефон: {{user.phone}} <br />
-          Телефон родителя: {{user.parentPhone}} <br />
-          Школа: {{user.school}} <br />
-          Класс: {{user.schoolClass}}
+          {% if user.phone is not none and user.phone != "" %} Телефон:
+          {{user.phone}} <br />
+          {% endif %} {% if user.parentPhone is not none and user.parentPhone !=
+          "" %} Телефон родителя: {{user.parentPhone}} <br />
+          {% endif %} Школа: {{user.school}}, {{user.schoolClass}} класс <br />
         </p>
-        <!-- Email -->
-        <!-- Кнопка редактирования -->
         <button class="btn btn-primary mb-3">Редактировать данные</button>
-        <!-- Кнопка подачи заявления -->
         <a href="/application" class="btn btn-success mb-3">
           Подать заявление на обучение
         </a>
       </div>
       <div class="col-md-8">
-        <!-- Список пройденных программ обучения -->
         <h4>Пройденные программы обучения</h4>
         <ul class="list-group mb-3">
           <li class="list-group-item">Python (2021-2022)</li>
           <li class="list-group-item">C++ (2022-2023)</li>
-          <!-- Добавьте нужные программы обучения -->
         </ul>
         <h4>Активная заявка: {{user.applicationSelectedProgram}}</h4>
         <p>Статус: {{user.applicationStatus}}</p>
