Timestamp для документов и страница о том что документы подтверждены

--- a/data/static/html/admin_approve.html
+++ b/data/static/html/admin_approve.html
@@ -36,7 +36,9 @@
                 <td>{{ user.phone }}</td>
                 <td>{{ user.application.selectedProgram }}</td>
                 <td>
-                  <a href="/admin/get_pdf_docs?user_id={{ user.id }}">Ссылка</a>
+                  <a href="/admin/get_pdf_docs?user_id={{ user.id }}"
+                    >Документы</a
+                  >
                 </td>
                 <td>
                   <button
