--- a/data/static/html/send_docs.html
+++ b/data/static/html/send_docs.html
@@ -159,9 +159,8 @@
         </div>
 
         <div class="warning">
-          Пожалуйста, обратите внимание, что документы могут быть отправлены
-          только один раз. После отправки мы будем их рассматривать и уведомим
-          вас о том, что документы были приняты или о проблемах с ними.
+          После отправки мы будем рассматривать документы и данные и уведомим
+          вас о том, были ли они приняты или нужно внести изменения.
         </div>
 
         <button type="submit" class="btn btn-primary">Загрузить</button>
